--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 img[src="images/fern.jpg"] {
     height: 100vh;
-    width: 550px;
+    width: 40vw;
     object-fit:cover;
 }
 
@@ -28,7 +28,7 @@ aside {
     justify-content: center;
     align-items: center;
 
-    width: 550px;
+    width: 40vw;
 
     font-family: "Norse-Bold";
     font-size: 64px;
@@ -46,7 +46,7 @@ aside {
 aside > p {
     display: flex;
     justify-content: center;
-    width: 550px;
+    width: 40vw;
     color: white;
     position: absolute;
     bottom: 12px;
@@ -60,3 +60,27 @@ aside > p > a::before, aside > p > a::after {
     content: "";
     padding: 3px;
 }
+
+main {
+    background-color: #F5F5F5;
+    flex: 1;
+}
+
+.first-heading {
+    padding: 128px 128px 48px 64px;
+    font-weight: 700;
+    font-size: 24px;
+}
+.first-heading p:nth-of-type(1) {
+    padding-bottom: 8px;
+}
+em {
+    font-style: italic;
+}
+
+.next-line {
+    padding: 0 128px 0 64px;
+    font-weight: 700;
+    font-size: 24px;
+}
+
