--- a/style.css
+++ b/style.css
@@ -66,21 +66,21 @@ main {
     flex: 1;
 }
 
-.first-heading {
-    padding: 128px 128px 48px 64px;
+section:nth-of-type(1) {
+    padding: 128px 128px 0 64px;
     font-weight: 700;
     font-size: 24px;
 }
-.first-heading p:nth-of-type(1) {
+section:nth-of-type(1) p:nth-of-type(1) {
     padding-bottom: 8px;
 }
+
+section:nth-of-type(1) p:nth-of-type(2) {
+    padding-bottom: 32px;
+}
+
 em {
     font-style: italic;
 }
 
-.next-line {
-    padding: 0 128px 0 64px;
-    font-weight: 700;
-    font-size: 24px;
-}
 
