--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ main {
 }
 
 section:nth-of-type(1) {
-    padding: 128px 128px 0 64px;
+    padding: 128px 128px 64px 64px;
     font-weight: 700;
     font-size: 24px;
 }
@@ -83,4 +83,23 @@ em {
     font-style: italic;
 }
 
+form {
+    padding: 32px 128px 32px 64px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
+h2 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    flex-basis: 100%;
+}
+
+.input-container {
+    padding: 0 32px 32px 0;
+    display: flex;
+    flex-direction: column;
+    
+}
