--- a/style.css
+++ b/style.css
@@ -89,17 +89,76 @@ form {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    box-shadow: 0 2px 4px 0 #505050;
 }
 
 h2 {
     font-weight: 700;
     font-size: 1.5rem;
     flex-basis: 100%;
+    padding-bottom: 32px;
 }
 
 .input-container {
+    width: 300px;
     padding: 0 32px 32px 0;
     display: flex;
     flex-direction: column;
-    
+}
+
+label {
+    text-transform: uppercase;
+    color: #505050;
+    font-size: 16px;
+    padding-bottom: 8px;
+}
+
+input {
+    all: unset;
+    font-family: Roboto, sans-serif;
+    border: #aaa 1px solid;
+    background-color: #fcfcfc;
+    border-radius: 3px;
+    padding: 8px;
+    font-size: 20px;
+}
+
+input:focus-within {
+    outline: #71d1ee 2px solid;
+    box-shadow: 2px 2px 2px 2px #505050;
+    border: 0px;
+}
+
+input:invalid:not(:placeholder-shown) {
+    outline: #cc4747 2px solid;
+    border: 0px;
+}
+
+.final-section {
+    padding: 32px 128px 32px 64px;
+}
+
+button {
+    border: 0px;
+    border-radius: 4px;
+    background-color: #596D48;
+
+    box-shadow: 2px 2px 2px 2px #505050;
+
+    color: #F5F5F5;
+    font-weight: 700;
+    font-size: 1.1rem;
+    height: 64px;
+    width: 256px;
+}
+
+.final-section > p {
+    padding-top: 32px;
+    font-size: 1.1rem;
+}
+
+.final-section > p > a {
+    text-decoration: none;
+    font-weight: 700;
+    color: #596D48;
 }
